--- a/src/editor/styles/icon.css
+++ b/src/editor/styles/icon.css
@@ -10,6 +10,7 @@
 .iconfont {
   font-family: "iconfont" !important;
   font-style: normal;
+  font-size: 30px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
