--- a/src/editor/styles/variable.css
+++ b/src/editor/styles/variable.css
@@ -19,6 +19,8 @@
   --c-dark: #171717;
   /* 更深色 */
   --c-darker: #1C1C1C;
+  /* 最深色 */
+  --c-darker-pro: #1E1E1E;
   /* 边框色 */
   --c-border: #26252B;
 
